--- a/index.html
+++ b/index.html
@@ -499,6 +499,18 @@
             <step-status title="Шаг 3" description="Добавление меток" status="blocked"></step-status>
             <step-status title="Шаг 4" description="Результат" status="to do"></step-status>
         </sidebar-wrapp>
+        <sidebar-wrapp>
+            <sidebar-header title="Требования" subtitle="Дерево требований к проекту "></sidebar-header>
+            <create-project-info-block title="1 Software Development">
+                <dropdown-block dropped>
+                    <test-cases-project-item title="1.1" description="Define preminely resources">
+                    </test-cases-project-item>
+                    <test-cases-project-item title="1.1" description="Define preminely resources"></test-cases-project-item>
+                    <test-cases-project-item title="1.1" description="Define preminely resources"></test-cases-project-item>
+                    <test-cases-project-item title="1.1" description="Define preminely resources"></test-cases-project-item>
+                </dropdown-block>
+            </create-project-info-block>
+        </sidebar-wrapp>
         <navbar-vertical>
             <navbar-vertical-item title="проект"></navbar-vertical-item>
 <!--            <navbar-vertical-item title="доступно"></navbar-vertical-item>-->
